tests/ui/snapshots/types_ai_return_not_schema.snap
---
source: crates/ws_cli/tests/ui.rs
description: tests/ui/types_ai_return_not_schema.wardscript
---
exit: Some(1)
--- human ---
[W0120] Error: the return type of `ai fn classify` has no JSON schema
   ╭─[ tests/ui/types_ai_return_not_schema.wardscript:1:33 ]
   │
 1 │ ai fn classify(text: String) -> Result<String, String> {
   │                                 ───────────┬──────────  
   │                                            ╰──────────── `Result` has no JSON representation
   │ 
   │ Help: the model's answer is validated against a JSON schema; use strings, numbers, booleans, lists, options, `Map<String, _>`, records and enums
───╯
error: could not check `tests/ui/types_ai_return_not_schema.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0120",
      "file": "tests/ui/types_ai_return_not_schema.wardscript",
      "help": "the model's answer is validated against a JSON schema; use strings, numbers, booleans, lists, options, `Map<String, _>`, records and enums",
      "labels": [
        {
          "message": "`Result` has no JSON representation",
          "primary": true,
          "span": {
            "end": {
              "column": 55,
              "line": 1,
              "offset": 54
            },
            "start": {
              "column": 33,
              "line": 1,
              "offset": 32
            }
          }
        }
      ],
      "message": "the return type of `ai fn classify` has no JSON schema",
      "severity": "error",
      "span": {
        "end": {
          "column": 55,
          "line": 1,
          "offset": 54
        },
        "start": {
          "column": 33,
          "line": 1,
          "offset": 32
        }
      }
    }
  ],
  "file": "tests/ui/types_ai_return_not_schema.wardscript"
}
