tests/ui/snapshots/types_arg_count.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/types_arg_count.wardscript
---
exit: Some(1)
--- human ---
[W0115] Error: function `add` takes 2 arguments but 1 was given
   ╭─[ tests/ui/types_arg_count.wardscript:6:5 ]
   │
 6 │     add(1)
   │     ───┬──  
   │        ╰──── expected 2 arguments
───╯
error: could not check `tests/ui/types_arg_count.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0115",
      "file": "tests/ui/types_arg_count.wardscript",
      "help": null,
      "labels": [
        {
          "message": "expected 2 arguments",
          "primary": true,
          "span": {
            "end": {
              "column": 11,
              "line": 6,
              "offset": 71
            },
            "start": {
              "column": 5,
              "line": 6,
              "offset": 65
            }
          }
        }
      ],
      "message": "function `add` takes 2 arguments but 1 was given",
      "severity": "error",
      "span": {
        "end": {
          "column": 11,
          "line": 6,
          "offset": 71
        },
        "start": {
          "column": 5,
          "line": 6,
          "offset": 65
        }
      }
    }
  ],
  "file": "tests/ui/types_arg_count.wardscript"
}
