tests/ui/snapshots/types_function_as_value.snap
---
source: crates/ws_cli/tests/ui.rs
description: tests/ui/types_function_as_value.wardscript
---
exit: Some(1)
--- human ---
[W0124] Error: function `helper` can't be used as a value
   ╭─[ tests/ui/types_function_as_value.wardscript:6:13 ]
   │
 6 │     let g = helper;
   │             ───┬──  
   │                ╰──── not a value
   │ 
   │ Help: call it: `helper(...)`
───╯
error: could not check `tests/ui/types_function_as_value.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0124",
      "file": "tests/ui/types_function_as_value.wardscript",
      "help": "call it: `helper(...)`",
      "labels": [
        {
          "message": "not a value",
          "primary": true,
          "span": {
            "end": {
              "column": 19,
              "line": 6,
              "offset": 70
            },
            "start": {
              "column": 13,
              "line": 6,
              "offset": 64
            }
          }
        }
      ],
      "message": "function `helper` can't be used as a value",
      "severity": "error",
      "span": {
        "end": {
          "column": 19,
          "line": 6,
          "offset": 70
        },
        "start": {
          "column": 13,
          "line": 6,
          "offset": 64
        }
      }
    }
  ],
  "file": "tests/ui/types_function_as_value.wardscript"
}
